--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,9 +76,20 @@
   	<location>/error/error404</location>
   </error-page>
   
-    <error-page>
+  <error-page>
   	<error-code>400</error-code>
   	<location>/WEB_INF/views/error/error_front.jsp</location>
+  </error-page>
+  
+  
+  <error-page>
+	<exception-type>java.lang.Throwable</exception-type>
+  	<location>/WEB_INF/views/error/error_back.jsp</location>
+  </error-page>
+  
+  <error-page>
+	<exception-type>java.lang.Throwable</exception-type>
+  	<location>/WEB_INF/views/error/error_back.jsp</location>
   </error-page>
   
   
